# tmcp

./: .agents.md  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEV.md  README.md
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/tenx-mcp/: Cargo.toml
crates/tenx-mcp/examples/: basic_client.rs  basic_client_stdio.rs  basic_server.rs  client_with_connection.rs  dynamic_registration.rs  ghusers.rs  oauth_client.rs  process_spawn.rs  register_client.rs  stream_connection.rs  timeout_server.rs  weather_server.rs
crates/tenx-mcp/src/: arguments.rs  codec.rs  connection.rs  jsonrpc.rs  lib.rs  server.rs  testutils.rs  transport.rs
crates/tenx-mcp/src/auth/: dynamic_registration.rs  mod.rs  oauth_client.rs
crates/tenx-mcp/src/schema/: capabilities.rs  content.rs  initialization.rs  prompts.rs  requests.rs  resources.rs  roots.rs  sampling.rs  tools.rs
crates/tenx-mcp/tests/: bidi.rs  client_server_ping.rs  dynamic_registration_test.rs  error_handling_test.rs  http_integration.rs  lifecycle_tests.rs  macro_derive.rs  notifications.rs  oauth_test.rs  protocol_compliance.rs  resources_file_test.rs  rmcp_integration.rs
crates/tmcp/: Cargo.toml
crates/tmcp-macros/: Cargo.toml
crates/tmcp-macros/src/: lib.rs
crates/tmcp-rhai/: Cargo.toml
crates/tmcp-rhai/src/: config.rs  engine.rs  error.rs  executor.rs  lib.rs
crates/tmcp/examples/: basic_client.rs  basic_client_stdio.rs  basic_server.rs  client_with_connection.rs  dynamic_registration.rs  stream_connection.rs  timeout_server.rs  weather_server.rs
crates/tmcp/src/: api.rs  arguments.rs  client.rs  codec.rs  connection.rs  context.rs  error.rs  http.rs  jsonrpc.rs  lib.rs  request_handler.rs  server.rs  testutils.rs  toolset.rs  transport.rs
crates/tmcp/src/auth/: discovery.rs  dynamic_registration.rs  mod.rs  oauth_client.rs
crates/tmcp/src/auth/server/: jwt.rs  middleware.rs  mod.rs
crates/tmcp/src/schema/: capabilities.rs  completions.rs  content.rs  icons.rs  implementation.rs  initialization.rs  jsonrpc.rs  mod.rs  prompts.rs  requests.rs  resources.rs  sampling.rs  tasks.rs  tools.rs
crates/tmcp/tests/: bidi.rs  cancellation.rs  client_server_ping.rs  dynamic_registration_test.rs  error_handling_test.rs  http_auth_integration.rs  http_integration.rs  inflight_disconnect.rs  lifecycle_tests.rs  macro_derive.rs  notification_meta.rs  notifications.rs  oauth_test.rs  progress_token.rs  progressive_discovery.rs  protocol_compliance.rs  resources_file_test.rs  rmcp_integration.rs
examples/: Cargo.toml  basic_client.rs  basic_client_stdio.rs  basic_server.rs  client_with_connection.rs  dynamic_registration.rs  ghusers.rs  oauth_client.rs  oauth_server.rs  process_spawn.rs  progressive_manual_activation.rs  progressive_server.rs  progressive_visibility.rs  register_client.rs  server_client_calls.rs  stream_connection.rs  timeout_server.rs  weather_server.rs
examples/src/: lib.rs
plans/: ergo-exec.md  ergo.md  flatargs.md  issues.md  progressive.md  server-auth.md  spec.md  tmcp.md
scripts/: sync_weather_example.py
xtask/src/: main.rs
