[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Complete, ergonomic implementation of the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/cortesi/tmcp"
keywords = ["mcp", "ai", "anthropic","openai"]

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
absolute_paths = "warn"
branches_sharing_code = "warn"
ignore_without_reason = "warn"
let_underscore_must_use = "warn"
many_single_char_names = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
self_named_module_files = "warn"
tests_outside_test_module = "warn"
use_self = "warn"
wildcard_dependencies = "warn"
cfg_not_test = "warn"
comparison_chain = "warn"
items_after_statements = "warn"

# Settings with config values in clippy.toml
cognitive_complexity = "warn"
excessive_nesting = "warn"
too_many_lines = "warn"
