[package]
name = "tmcp-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
heck = "0.5"
proc-macro2 = "1.0"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0"
structmeta = "0.3.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
