[package]
name = "tmcp-rhai"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rhai scripting integration for TMCP (Transport Model for Context Protocol)"

[dependencies]
rhai = { version = "1.24", features = ["internals", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tmcp = { path = "../tmcp" }
