[package]
name = "tmcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
tmcp-macros = { path = "../tmcp-macros", version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
async-trait = "0.1"
bytes = "1.11"
schemars = "1.1"
axum = { version = "0.8", features = ["http2"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
http = "1.4"
uuid = { version = "1.19", features = ["v4", "serde"] }
dashmap = "6.1"
async-stream = "0.3"
oauth2 = { version = "5.0", features = ["reqwest"] }
url = "2.5"
mime_guess = "2.0"
base64 = "0.22"

[dev-dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["client", "server", "transport-worker", "transport-streamable-http-server"] }
schemars = "1.1"
